<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <ImageView
        android:contentDescription="@string/DktLogoDescription"
        android:id="@+id/dkt_logo"
        android:layout_width="293dp"
        android:layout_height="152dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/dkt_logo_2"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dkt_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bangers"
        android:text="@string/PleaseEnterUsername"
        android:textColor="@color/dkt_red"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username_textview"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="textPersonName"
        android:hint="@string/UserName"
        android:autofillHints="name"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/EnterButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username_edittext"
        android:layout_marginTop="20dp"
        android:textColor="@color/dkt_yellow"
        android:textSize="20sp"
        android:fontFamily="@font/bangers"
        android:background="@drawable/host_btn_background"/>

</RelativeLayout>